tests/flow_errors/unknown_argument/error.txt
Error: 
    7 | deploy flow without_arg with arg = "snot" end;
      |                              ^^^ Unknown argument: arg